syntax = "proto3";

package project.planton.provider.cloudflare.cloudflareworker.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/cloudflare/cloudflareworker/v1/spec.proto";
import "project/planton/provider/cloudflare/cloudflareworker/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";
import "project/planton/shared/status.proto";

// cloudflare-worker
message CloudflareWorker {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'cloudflare.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'CloudflareWorker'];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  CloudflareWorkerSpec spec = 4 [(buf.validate.field).required = true];

  //status
  CloudflareWorkerStatus status = 5;
}

// cloudflare-worker status
message CloudflareWorkerStatus {
  //stack-outputs
  //  cloudflare-worker stack-outputs
  CloudflareWorkerStackOutputs outputs = 1;
}
